Fixed various color-related bugs

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -8,13 +8,13 @@ block.2 = weeping_vines_plant weeping_vines hanging_roots cave_vines:berries=fal
 
 # light-emitting blocks referenced from https://minecraft.fandom.com/wiki/Light
 # last entries separated by two spaces don't usually emit light
-block.3 = beacon conduit:waterlogged=true end_gateway end_portal fire glowstone lava flowing_lava pearlescent_froglight verdant_froglight ochre_froglight lantern redstone_lamp:lit=true respawn_anchor:charges=4,3,2,1 sea_lantern sea_pickle:waterlogged=true shroomlight end_rod candle:lit=true nether_portal crying_obsidian soul_fire soul_lantern ender_chest glow_lichen amethyst_cluster:facing=north,south,east,west large_amethyst_bud:facing=north,south,east,west medium_amethyst_bud:facing=north,south,east,west small_amethyst_bud:facing=north,south,east,west magma_block brewing_stand dragon_egg end_portal_frame:eye=true sculk_sensor:sculk_sensor_phase=active  amethyst_block budding_amethyst
+block.3 = beacon conduit:waterlogged=true end_gateway end_portal fire glowstone lava flowing_lava pearlescent_froglight verdant_froglight ochre_froglight lantern redstone_lamp:lit=true respawn_anchor:charges=4,3,2,1 sea_lantern sea_pickle:waterlogged=true shroomlight end_rod candle:lit=true nether_portal crying_obsidian soul_fire soul_lantern ender_chest glow_lichen amethyst_cluster:facing=north,south,east,west large_amethyst_bud:facing=north,south,east,west medium_amethyst_bud:facing=north,south,east,west small_amethyst_bud:facing=north,south,east,west brewing_stand dragon_egg end_portal_frame:eye=true  amethyst_block budding_amethyst
 
 # up-facing glowing
-block.4 = brown_mushroom redstone_wire:power=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15
+block.4 = brown_mushroom amethyst_cluster:facing=up large_amethyst_bud:facing=up medium_amethyst_bud:facing=up small_amethyst_bud:facing=up redstone_wire:power=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15
 
 # down-facing glowing
-# block.5 = ;
+block.5 = amethyst_cluster:facing=down large_amethyst_bud:facing=down medium_amethyst_bud:facing=down small_amethyst_bud:facing=down;
 
 # partially light-emitting blocks
 # last entries separated by two spaces don't usually emit light
@@ -25,3 +25,6 @@ block.6 = lava_cauldron campfire:lit=true jack_o_lantern torch wall_torch blast_
 
 # exception: partially-lit down-facing cutouts
 block.8 = cave_vines:berries=true cave_vines_plant:berries=true
+
+# little *s that don't want to cooperate with the lightmap
+block.9 = magma_block sculk_sensor:sculk_sensor_phase=active
