--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,8 +1,10 @@
+clouds=off
+separateAo=true
 oldLighting=false
 vignette=false
 rain.depth=true
 beacon.beam.depth=true
-underwaterOverlay=false
+# underwaterOverlay=false
 # texture.noise = /tex/noise/LDR_RGBA_0.png
 texture.noise = /tex/noise/WHITE_RGBA.png
 
@@ -17,8 +19,7 @@ blend.composite.colortex7=off
 # generic2: 6
 # generic3: 7
 
-
-texture.composite.depthtex2=/LUTs/lut.png
+texture.composite.shadowcolor1=/LUTs/lut.png
 
 flip.composite.colortex0=true
 flip.composite.colortex1=true
@@ -90,7 +91,6 @@ flip.composite6.colortex6=false
 flip.composite6.colortex7=false
 program.composite6.enabled=true
 
-
 flip.final.colortex0=true
 flip.final.colortex1=false
 flip.final.colortex2=false
@@ -104,12 +104,11 @@ program.final.enabled=true
 
 screen = [POST_PROCESSING] [LIGHTING] [COLORS] [RESOURCEPACK] [ADVANCED] [MISC]
 
-screen.POST_PROCESSING = CONTRAST EXPOSURE [DENOISE_PREFS] [EXPOSURE_PREFS] [TONEMAPPING]
-    screen.DENOISE_PREFS = DENOISE DENOISE_MULT MAX_COMPLETE_SAMPLE_DIAMETER
+screen.POST_PROCESSING = CONTRAST EXPOSURE [EXPOSURE_PREFS] [TONEMAPPING]
     screen.EXPOSURE_PREFS = AUTO_EXPOSE EXPOSURE_SAMPLES EXPOSURE_UPDATE_SPEED MIN_EXPOSURE MAX_EXPOSURE EXPOSURE_BOUNDS
 screen.LIGHTING = CUTOUT_ALIGN_STRENGTH [LIGHT_STRENGTH] SUN_TEMP TORCH_TEMP [SSAO] [SSGI]
     screen.LIGHT_STRENGTH = MIN_LIGHT_MULT AMBIENT_LIGHT_MULT REAL_LIGHTING SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER NIGHT_SKY_LIGHT_MULT_USER MOON_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER 
-    screen.SSAO = SSAO_ENABLED AO_RADIUS AO_INTENSITY PRETTY_AO TEMPORAL_UPDATE_SPEED_AO AO_SAMPLES
+    screen.SSAO = AO_MODE AO_RADIUS AO_INTENSITY PRETTY_AO TEMPORAL_UPDATE_SPEED_AO AO_SAMPLES
     screen.SSGI = SSGI_ENABLED COLORED_LIGHT_ONLY DIM_LIGHT_DESAT_USER BOUNCE_MULT LIT_MULTIPLIER TEMPORAL_UPDATE_SPEED_USER [ADVANCED_SSGI]
         screen.ADVANCED_SSGI = USE_SECONDARY_BOUNCES ADAPTIVE_SAMPLING_SSGI SCREEN_SAMPLES MIN_SAMPLES MAX_SAMPLES MAX_NEW_SAMPLES MAX_LIGHT_PROPAGATION SELF_ILLUMINATION POWERFUL_SAMPLE POWERFUL_SAMPLE_AMOUNT OLD_SAMPLING
 screen.COLORS = VANILLA_COLORS SUN_TEMP TORCH_TEMP SKY_SATURATION SKY_BRIGHTNESS [REALISTIC_COLORS_PREFS] [TONEMAPPING]
@@ -122,5 +121,4 @@ screen.RESOURCEPACK = TEX_RES TEX_RENDER
 screen.MISC = STREAMER_MODE
 screen.ADVANCED = DEBUG_VIEW [AUTO_ADDED] [ADVANCED_SSGI]
     screen.AUTO_ADDED = *
-
-sliders = CONTRAST EXPOSURE DENOISE_MULT EXPOSURE_SAMPLES EXPOSURE_UPDATE_SPEED MIN_EXPOSURE MAX_EXPOSURE EXPOSURE_BOUNDS OVEREXPOSE_SKY CUTOUT_ALIGN_STRENGTH MIN_LIGHT_MULT AMBIENT_LIGHT_MULT SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER MOON_LIGHT_MULT_USER NIGHT_SKY_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER AO_RADIUS AO_INTENSITY TEMPORAL_UPDATE_SPEED_AO AO_SAMPLES BOUNCE_MULT LIT_MULTIPLIER DIM_LIGHT_DESAT_USER TEMPORAL_UPDATE_SPEED_USER SCREEN_SAMPLES MIN_SAMPLES MAX_SAMPLES MAX_NEW_SAMPLES MAX_LIGHT_PROPAGATION SELF_ILLUMINATION POWERFUL_SAMPLE_AMOUNT VANILLA_COLORS SUN_TEMP TORCH_TEMP SKY_SATURATION SKY_BRIGHTNESS NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION COLORS_SATURATION COLORS_CONTRAST COLORS_CONTRAST_BRIGHT_BIAS COLORS_SATURATION_WEIGHTS_RED COLORS_SATURATION_WEIGHTS_GREEN COLORS_SATURATION_WEIGHTS_BLUE TEX_RES MAX_COMPLETE_SAMPLE_DIAMETER
+sliders = CONTRAST EXPOSURE EXPOSURE_SAMPLES EXPOSURE_UPDATE_SPEED MIN_EXPOSURE MAX_EXPOSURE EXPOSURE_BOUNDS OVEREXPOSE_SKY CUTOUT_ALIGN_STRENGTH MIN_LIGHT_MULT AMBIENT_LIGHT_MULT SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER MOON_LIGHT_MULT_USER NIGHT_SKY_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER AO_RADIUS AO_INTENSITY TEMPORAL_UPDATE_SPEED_AO AO_SAMPLES BOUNCE_MULT LIT_MULTIPLIER DIM_LIGHT_DESAT_USER TEMPORAL_UPDATE_SPEED_USER SCREEN_SAMPLES MIN_SAMPLES MAX_SAMPLES MAX_NEW_SAMPLES MAX_LIGHT_PROPAGATION SELF_ILLUMINATION POWERFUL_SAMPLE_AMOUNT VANILLA_COLORS SUN_TEMP TORCH_TEMP SKY_SATURATION SKY_BRIGHTNESS NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION COLORS_SATURATION COLORS_CONTRAST COLORS_CONTRAST_BRIGHT_BIAS COLORS_SATURATION_WEIGHTS_RED COLORS_SATURATION_WEIGHTS_GREEN COLORS_SATURATION_WEIGHTS_BLUE TEX_RES
