fixed transparent masking

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,15 +1,17 @@
-clouds=off
 separateAo=true
+
+clouds=off
+
 oldLighting=false
 vignette=false
+
 rain.depth=true
 beacon.beam.depth=true
+
 # underwaterOverlay=false
 # texture.noise = /tex/noise/LDR_RGBA_0.png
 texture.noise = /tex/noise/WHITE_RGBA.png
 
-blend.composite.colortex6=off
-blend.composite.colortex7=off
 
 # albedo:   0
 # normal:   1
@@ -18,6 +20,25 @@ blend.composite.colortex7=off
 # generic:  5
 # generic2: 6
 # generic3: 7
+
+# blend.gbuffers_water=ONE ZERO ONE ZERO
+# blend.gbuffers_water.texture=off
+# blend.gbuffers_water.lightmap=off
+# blend.gbuffers_water.normals=ONE ZERO ONE ZERO
+# blend.gbuffers_water.specular=off
+# blend.gbuffers_water.gaux1=off
+# blend.gbuffers_water.gaux2=off
+# blend.gbuffers_water.gaux3=off
+# blend.gbuffers_water.gaux4=off
+
+# blend.composite.colortex0=
+# blend.composite.colortex1=
+# blend.composite.colortex2=
+# blend.composite.colortex3=
+# blend.composite.colortex4=
+# blend.composite.colortex5=
+blend.composite.colortex6=off
+blend.composite.colortex7=off
 
 texture.composite.shadowcolor1=/LUTs/lut.png
 
