--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -11,7 +11,8 @@ block.2 = weeping_vines_plant weeping_vines hanging_roots cave_vines:berries=fal
 block.3 = beacon conduit:waterlogged=true end_gateway end_portal fire glowstone lava flowing_lava pearlescent_froglight verdant_froglight ochre_froglight lantern redstone_lamp:lit=true respawn_anchor:charges=4,3,2,1 sea_lantern sea_pickle:waterlogged=true shroomlight end_rod candle:lit=true nether_portal crying_obsidian soul_fire soul_lantern ender_chest glow_lichen amethyst_cluster:facing=north,south,east,west large_amethyst_bud:facing=north,south,east,west medium_amethyst_bud:facing=north,south,east,west small_amethyst_bud:facing=north,south,east,west brewing_stand dragon_egg end_portal_frame:eye=true  amethyst_block budding_amethyst
 
 # up-facing glowing
-block.4 = brown_mushroom amethyst_cluster:facing=up large_amethyst_bud:facing=up medium_amethyst_bud:facing=up small_amethyst_bud:facing=up redstone_wire:power=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15
+block.4 = amethyst_cluster:facing=up large_amethyst_bud:facing=up medium_amethyst_bud:facing=up small_amethyst_bud:facing=up redstone_wire:power=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15
+# brown_mushroom
 
 # down-facing glowing
 block.5 = amethyst_cluster:facing=down large_amethyst_bud:facing=down medium_amethyst_bud:facing=down small_amethyst_bud:facing=down;
@@ -21,7 +22,7 @@ block.5 = amethyst_cluster:facing=down large_amethyst_bud:facing=down medium_ame
 block.6 = lava_cauldron campfire:lit=true jack_o_lantern torch wall_torch blast_furnace:lit=true furnace:lit=true smoker:lit=true soul_campfire:lit=true soul_torch soul_wall_torch deepslate_redstone_ore:lit=true redstone_ore:lit=true enchanting_table redstone_torch redstone_wall_torch  diamond_ore deepslate_diamond_ore emerald_ore deepslate_emerald_ore
 
 # exception: partially-lit up-facing cutouts
-# block.7 = ;
+block.7 = brown_mushroom
 
 # exception: partially-lit down-facing cutouts
 block.8 = cave_vines:berries=true cave_vines_plant:berries=true
