Added ability to override color settings in LUTs

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -123,9 +123,9 @@ screen.LIGHTING = CUTOUT_ALIGN_STRENGTH [LIGHT_STRENGTH] SUN_TEMP TORCH_TEMP [SS
     screen.SSGI = SSGI_ENABLED COLORED_LIGHT_ONLY DIM_LIGHT_DESAT_USER BOUNCE_MULT LIT_MULTIPLIER TEMPORAL_UPDATE_SPEED_USER [ADVANCED_SSGI]
         screen.ADVANCED_SSGI = USE_SECONDARY_BOUNCES ADAPTIVE_SAMPLING_SSGI SCREEN_SAMPLES MIN_SAMPLES MAX_SAMPLES MAX_NEW_SAMPLES MAX_LIGHT_PROPAGATION SELF_ILLUMINATION POWERFUL_SAMPLE POWERFUL_SAMPLE_AMOUNT OLD_SAMPLING
 screen.COLORS = VANILLA_COLORS SUN_TEMP TORCH_TEMP SKY_SATURATION SKY_BRIGHTNESS [TONEMAPPING]
-    screen.TONEMAPPING = [NIGHT_EFFECT] [ACES]  USE_LUT GAMMA_CORRECT GAMMA_CORRECT_PRE
+    screen.TONEMAPPING = [NIGHT_EFFECT] [ACES]  USE_LUT USER_GAMMA_CORRECT
         screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION NIGHT_EFFECT_AFTER_EXPOSURE
-        screen.ACES = USE_ACES OUTPUT_COLORSPACE RTT_MODE
+        screen.ACES = USER_OUTPUT_COLORSPACE USER_LMT_MODE
 screen.RESOURCEPACK = TEX_RES TEX_RENDER
 screen.MISC = STREAMER_MODE
 screen.ADVANCED = DEBUG_VIEW [AUTO_ADDED] [ADVANCED_SSGI]
