Shader now uses 3D texture for LUT

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -41,7 +41,8 @@ texture.noise = /tex/noise/WHITE_RGBA.png
 blend.composite.colortex6=off
 blend.composite.colortex7=off
 
-texture.composite.shadowcolor1=/LUTs/lut.png
+texture.composite.shadowcolor1=/LUTs/lut.dat TEXTURE_3D RGB16F 65 65 65 RGB FLOAT
+# texture.composite.shadowcolor1=/LUTs/lut.png
 
 flip.composite.colortex0=true
 flip.composite.colortex1=true
