Fix sky, first three buffers

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,12 +1,31 @@
-separateAo=true
-
 clouds=off
-
+oldHandLight=false
+dynamicHandLight=true
 oldLighting=false
+shadowTerrain=true
+shadowTransluscent=false
+shadowEntities=false
+shadowBlockEntities=false
+underwaterOverlay=false
+sun=true
+moon=true
 vignette=false
+
+backFace.solid=false 
+backFace.cutout=false
+backFace.cutoutMipped=false
+backFace.translucent=false
 
 rain.depth=true
 beacon.beam.depth=true
+
+separateAo=true
+
+frustum.culling=true
+shadow.culling=false
+
+particles.before.deferred=false
+
 
 # TODO: add custom overlay
 # underwaterOverlay=false
@@ -31,6 +50,9 @@ texture.noise = /tex/noise/WHITE_RGBA.png
 # blend.gbuffers_water.gaux2=off
 # blend.gbuffers_water.gaux3=off
 # blend.gbuffers_water.gaux4=off
+
+blend.gbuffers_water=ONE_MINUS_DST_ALPHA DST_ALPHA SRC_ALPHA ZERO
+blend.gbuffers_hand_water=ONE_MINUS_DST_ALPHA DST_ALPHA SRC_ALPHA ZERO
 
 # blend.composite.colortex0=
 # blend.composite.colortex1=
