Proper compositing, added fog

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -66,14 +66,14 @@ blend.composite.colortex7=off
 texture.composite.shadowcolor1=/LUTs/lut.dat TEXTURE_3D RGB16F 65 65 65 RGB FLOAT
 # texture.composite.shadowcolor1=/LUTs/lut.png
 
-flip.composite.colortex0=true
-flip.composite.colortex1=true
+flip.composite.colortex0=false
+flip.composite.colortex1=false
 flip.composite.colortex2=false
 flip.composite.colortex3=false
-flip.composite.colortex4=true
-flip.composite.colortex5=true
-flip.composite.colortex6=true
-flip.composite.colortex7=true
+flip.composite.colortex4=false
+flip.composite.colortex5=false
+flip.composite.colortex6=false
+flip.composite.colortex7=false
 program.composite.enabled=true
 
 flip.composite1.colortex0=false
@@ -82,9 +82,9 @@ flip.composite1.colortex2=false
 flip.composite1.colortex3=false
 flip.composite1.colortex4=false
 flip.composite1.colortex5=false
-flip.composite1.colortex6=true
+flip.composite1.colortex6=false
 flip.composite1.colortex7=false
-program.composite1.enabled=SSAO_ENABLED
+program.composite1.enabled=true
 
 flip.composite2.colortex0=true
 flip.composite2.colortex1=false
@@ -96,35 +96,15 @@ flip.composite2.colortex6=false
 flip.composite2.colortex7=false
 program.composite2.enabled=true
 
-flip.composite3.colortex0=false
+flip.composite3.colortex0=true
 flip.composite3.colortex1=false
 flip.composite3.colortex2=false
 flip.composite3.colortex3=false
 flip.composite3.colortex4=false
 flip.composite3.colortex5=false
 flip.composite3.colortex6=false
-flip.composite3.colortex7=true
-program.composite3.enabled=AUTO_EXPOSE
-
-flip.composite4.colortex0=false
-flip.composite4.colortex1=false
-flip.composite4.colortex2=false
-flip.composite4.colortex3=false
-flip.composite4.colortex4=false
-flip.composite4.colortex5=false
-flip.composite4.colortex6=true
-flip.composite4.colortex7=true
-program.composite4.enabled=AUTO_EXPOSE
-
-flip.composite5.colortex0=true
-flip.composite5.colortex1=false
-flip.composite5.colortex2=false
-flip.composite5.colortex3=false
-flip.composite5.colortex4=false
-flip.composite5.colortex5=false
-flip.composite5.colortex6=false
-flip.composite5.colortex7=false
-program.composite5.enabled=true
+flip.composite3.colortex7=false
+program.composite3.enabled=true
 
 flip.final.colortex0=true
 flip.final.colortex1=false
