Added missing gbuffers

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -51,8 +51,8 @@ texture.noise = /tex/noise/WHITE_RGBA.png
 # blend.gbuffers_water.gaux3=off
 # blend.gbuffers_water.gaux4=off
 
-blend.gbuffers_water=ONE_MINUS_DST_ALPHA DST_ALPHA SRC_ALPHA ZERO
-blend.gbuffers_hand_water=ONE_MINUS_DST_ALPHA DST_ALPHA SRC_ALPHA ZERO
+# blend.gbuffers_water=ONE_MINUS_DST_ALPHA DST_ALPHA SRC_ALPHA ZERO
+# blend.gbuffers_hand_water=ONE_MINUS_DST_ALPHA DST_ALPHA SRC_ALPHA ZERO
 
 # blend.composite.colortex0=
 # blend.composite.colortex1=
@@ -67,7 +67,7 @@ texture.composite.shadowcolor1=/LUTs/lut.dat TEXTURE_3D RGB16F 65 65 65 RGB FLOA
 # texture.composite.shadowcolor1=/LUTs/lut.png
 
 flip.composite.colortex0=false
-flip.composite.colortex1=false
+flip.composite.colortex1=true
 flip.composite.colortex2=false
 flip.composite.colortex3=false
 flip.composite.colortex4=false
@@ -77,7 +77,7 @@ flip.composite.colortex7=false
 program.composite.enabled=true
 
 flip.composite1.colortex0=false
-flip.composite1.colortex1=false
+flip.composite1.colortex1=true
 flip.composite1.colortex2=false
 flip.composite1.colortex3=false
 flip.composite1.colortex4=false
