Added basic shadows

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -2,10 +2,6 @@ clouds=off
 oldHandLight=false
 dynamicHandLight=true
 oldLighting=false
-shadowTerrain=true
-shadowTransluscent=false
-shadowEntities=false
-shadowBlockEntities=false
 underwaterOverlay=false
 sun=true
 moon=true
@@ -22,7 +18,14 @@ beacon.beam.depth=true
 separateAo=true
 
 frustum.culling=true
-shadow.culling=false
+
+
+shadow.culling=true
+
+shadowTerrain=true
+shadowTransluscent=true
+shadowEntities=true
+shadowBlockEntities=true
 
 particles.before.deferred=false
 
