Improved shadow distortion, added shadow cutoff

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -20,7 +20,7 @@ separateAo=true
 frustum.culling=true
 
 
-shadow.culling=true
+shadow.culling=false
 
 shadowTerrain=true
 shadowTransluscent=true
