Moved opaque lighting/comp to deferred

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -69,6 +69,26 @@ blend.composite.colortex7=off
 texture.composite.shadowcolor1=/LUTs/lut.dat TEXTURE_3D RGB16F 65 65 65 RGB FLOAT
 # texture.composite.shadowcolor1=/LUTs/lut.png
 
+flip.deferred.colortex0=false
+flip.deferred.colortex1=true
+flip.deferred.colortex2=false
+flip.deferred.colortex3=false
+flip.deferred.colortex4=false
+flip.deferred.colortex5=false
+flip.deferred.colortex6=false
+flip.deferred.colortex7=false
+program.deferred.enabled=true
+
+flip.deferred1.colortex0=true
+flip.deferred1.colortex1=false
+flip.deferred1.colortex2=false
+flip.deferred1.colortex3=false
+flip.deferred1.colortex4=false
+flip.deferred1.colortex5=false
+flip.deferred1.colortex6=false
+flip.deferred1.colortex7=false
+program.deferred1.enabled=true
+
 flip.composite.colortex0=false
 flip.composite.colortex1=true
 flip.composite.colortex2=false
@@ -79,8 +99,8 @@ flip.composite.colortex6=false
 flip.composite.colortex7=false
 program.composite.enabled=true
 
-flip.composite1.colortex0=false
-flip.composite1.colortex1=true
+flip.composite1.colortex0=true
+flip.composite1.colortex1=false
 flip.composite1.colortex2=false
 flip.composite1.colortex3=false
 flip.composite1.colortex4=false
@@ -88,26 +108,6 @@ flip.composite1.colortex5=false
 flip.composite1.colortex6=false
 flip.composite1.colortex7=false
 program.composite1.enabled=true
-
-flip.composite2.colortex0=true
-flip.composite2.colortex1=false
-flip.composite2.colortex2=false
-flip.composite2.colortex3=false
-flip.composite2.colortex4=false
-flip.composite2.colortex5=false
-flip.composite2.colortex6=false
-flip.composite2.colortex7=false
-program.composite2.enabled=true
-
-flip.composite3.colortex0=true
-flip.composite3.colortex1=false
-flip.composite3.colortex2=false
-flip.composite3.colortex3=false
-flip.composite3.colortex4=false
-flip.composite3.colortex5=false
-flip.composite3.colortex6=false
-flip.composite3.colortex7=false
-program.composite3.enabled=true
 
 flip.final.colortex0=true
 flip.final.colortex1=false
