New lighting pipeline for transparent stuff

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -54,8 +54,8 @@ texture.noise = /tex/noise/WHITE_RGBA.png
 # blend.gbuffers_water.gaux3=off
 # blend.gbuffers_water.gaux4=off
 
-# blend.gbuffers_water=ONE_MINUS_DST_ALPHA DST_ALPHA SRC_ALPHA ZERO
-# blend.gbuffers_hand_water=ONE_MINUS_DST_ALPHA DST_ALPHA SRC_ALPHA ZERO
+# blend.gbuffers_water=ONE ZERO ONE ZERO
+# blend.gbuffers_hand_water=ONE ZERO ONE ZERO
 
 # blend.composite.colortex0=
 # blend.composite.colortex1=
@@ -80,24 +80,26 @@ flip.deferred.colortex7=false
 program.deferred.enabled=true
 
 flip.deferred1.colortex0=true
-flip.deferred1.colortex1=false
+flip.deferred1.colortex1=true
 flip.deferred1.colortex2=false
-flip.deferred1.colortex3=false
-flip.deferred1.colortex4=false
-flip.deferred1.colortex5=false
+flip.deferred1.colortex3=true
+flip.deferred1.colortex4=true
+flip.deferred1.colortex5=true
 flip.deferred1.colortex6=false
 flip.deferred1.colortex7=false
 program.deferred1.enabled=true
 
-flip.composite.colortex0=false
-flip.composite.colortex1=true
+
+
+flip.composite.colortex0=true
+flip.composite.colortex1=false
 flip.composite.colortex2=false
 flip.composite.colortex3=false
 flip.composite.colortex4=false
 flip.composite.colortex5=false
 flip.composite.colortex6=false
 flip.composite.colortex7=false
-program.composite.enabled=true
+program.composite.enabled=ENABLE_SHADOWS
 
 flip.composite1.colortex0=true
 flip.composite1.colortex1=false
