Improved shadow cutoff

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -20,14 +20,14 @@ separateAo=true
 frustum.culling=true
 
 
-shadow.culling=false
+shadow.culling=true
 
 shadowTerrain=true
 shadowTransluscent=true
 shadowEntities=true
 shadowBlockEntities=true
 
-particles.before.deferred=false
+particles.before.deferred=true
 
 
 # TODO: add custom overlay
@@ -81,14 +81,13 @@ program.deferred.enabled=true
 
 flip.deferred1.colortex0=true
 flip.deferred1.colortex1=true
-flip.deferred1.colortex2=true
-flip.deferred1.colortex3=true
-flip.deferred1.colortex4=true
+flip.deferred1.colortex2=false
+flip.deferred1.colortex3=false
+flip.deferred1.colortex4=false
 flip.deferred1.colortex5=false
 flip.deferred1.colortex6=false
 flip.deferred1.colortex7=false
 program.deferred1.enabled=true
-
 
 
 flip.composite.colortex0=true
