Added options for shadows

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -125,10 +125,11 @@ screen = [POST_PROCESSING] [LIGHTING] [COLORS] [RESOURCEPACK] [ADVANCED] [MISC]
 
 screen.POST_PROCESSING = CONTRAST EXPOSURE [EXPOSURE_PREFS] [TONEMAPPING]
     screen.EXPOSURE_PREFS = AUTO_EXPOSE EXPOSURE_SAMPLES EXPOSURE_UPDATE_SPEED MIN_EXPOSURE MAX_EXPOSURE EXPOSURE_BOUNDS
-screen.LIGHTING = CUTOUT_ALIGN_STRENGTH [LIGHT_STRENGTH] SUN_TEMP TORCH_TEMP [SSAO] [SSGI] ATMOSPHERIC_FOG_USER ATOMSPHERIC_FOG_DENSITY
-    screen.LIGHT_STRENGTH = MIN_LIGHT_MULT AMBIENT_LIGHT_MULT REAL_LIGHTING SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER NIGHT_SKY_LIGHT_MULT_USER MOON_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER 
+screen.LIGHTING = [SSAO] [SSGI] [SHADOWS] [LIGHT_STRENGTH] <empty> <empty> ATMOSPHERIC_FOG_USER ATOMSPHERIC_FOG_DENSITY <empty> <empty> SUN_TEMP TORCH_TEMP
     screen.SSAO = AO_MODE AO_RADIUS AO_INTENSITY PRETTY_AO TEMPORAL_UPDATE_SPEED_AO AO_SAMPLES
     screen.SSGI = SSGI_ENABLED COLORED_LIGHT_ONLY DIM_LIGHT_DESAT_USER BOUNCE_MULT LIT_MULTIPLIER TEMPORAL_UPDATE_SPEED_USER [ADVANCED_SSGI]
+    screen.SHADOWS = ENABLE_SHADOWS <empty> SHADOW_CUTOFF SHADOW_DISTORTION
+    screen.LIGHT_STRENGTH = MIN_LIGHT_MULT AMBIENT_LIGHT_MULT REAL_LIGHTING SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER NIGHT_SKY_LIGHT_MULT_USER MOON_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER 
         screen.ADVANCED_SSGI = USE_SECONDARY_BOUNCES ADAPTIVE_SAMPLING_SSGI SCREEN_SAMPLES MIN_SAMPLES MAX_SAMPLES MAX_NEW_SAMPLES MAX_LIGHT_PROPAGATION SELF_ILLUMINATION POWERFUL_SAMPLE POWERFUL_SAMPLE_AMOUNT OLD_SAMPLING
 screen.COLORS = VANILLA_COLORS SUN_TEMP TORCH_TEMP SKY_SATURATION SKY_BRIGHTNESS_USER [TONEMAPPING]
     screen.TONEMAPPING = [NIGHT_EFFECT] [ACES]  USE_LUT USER_GAMMA_CORRECT USER_OUTPUT_COLORSPACE USER_LMT_MODE
