Added basic temporal super-resolution for shaders

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -69,6 +69,13 @@ blend.composite.colortex7=off
 texture.composite.shadowcolor1=/LUTs/lut.dat TEXTURE_3D RGB16F 65 65 65 RGB FLOAT
 # texture.composite.shadowcolor1=/LUTs/lut.png
 
+# shadowcomp doesn't exist intentionally, it acts as shadowcomp_pre since that program isn't provided by optifine
+flip.shadowcomp.colortex1=true
+program.shadowcomp.enabled=true
+
+flip.shadowcomp1.colortex1=true
+program.shadowcomp1.enabled=true
+
 flip.deferred.colortex0=false
 flip.deferred.colortex1=true
 flip.deferred.colortex2=false
