Added shadow options

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -105,7 +105,7 @@ flip.composite.colortex4=false
 flip.composite.colortex5=false
 flip.composite.colortex6=false
 flip.composite.colortex7=false
-program.composite.enabled=ENABLE_SHADOWS
+program.composite.enabled=SHADOWS_ENABLED
 
 flip.composite1.colortex0=true
 flip.composite1.colortex1=false
@@ -135,14 +135,14 @@ screen.POST_PROCESSING = CONTRAST EXPOSURE [EXPOSURE_PREFS] [TONEMAPPING]
 screen.LIGHTING = [SSAO] [SSGI] [SHADOWS] [LIGHT_STRENGTH] <empty> <empty> ATMOSPHERIC_FOG_USER ATOMSPHERIC_FOG_DENSITY <empty> <empty> SUN_TEMP TORCH_TEMP
     screen.SSAO = AO_MODE AO_RADIUS AO_INTENSITY PRETTY_AO TEMPORAL_UPDATE_SPEED_AO AO_SAMPLES
     screen.SSGI = SSGI_ENABLED COLORED_LIGHT_ONLY DIM_LIGHT_DESAT_USER BOUNCE_MULT LIT_MULTIPLIER TEMPORAL_UPDATE_SPEED_USER [ADVANCED_SSGI]
-    screen.SHADOWS = ENABLE_SHADOWS <empty> SHADOW_CUTOFF SHADOW_DISTORTION
+    screen.SHADOWS = SHADOWS_ENABLED_USER shadowDistance shadowMapResolution SHADOW_SUPERSAMPLE SHADOW_DISTORTION
     screen.LIGHT_STRENGTH = MIN_LIGHT_MULT AMBIENT_LIGHT_MULT REAL_LIGHTING SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER NIGHT_SKY_LIGHT_MULT_USER MOON_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER 
         screen.ADVANCED_SSGI = USE_SECONDARY_BOUNCES ADAPTIVE_SAMPLING_SSGI SCREEN_SAMPLES MIN_SAMPLES MAX_SAMPLES MAX_NEW_SAMPLES MAX_LIGHT_PROPAGATION SELF_ILLUMINATION POWERFUL_SAMPLE POWERFUL_SAMPLE_AMOUNT OLD_SAMPLING
-screen.COLORS = VANILLA_COLORS SUN_TEMP TORCH_TEMP SKY_SATURATION SKY_BRIGHTNESS_USER [TONEMAPPING]
+screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] VANILLA_COLORS <empty> <empty> <empty> SUN_TEMP TORCH_TEMP SKY_SATURATION SKY_COLOR_BLEND <empty> <empty> SKY_BRIGHTNESS_USER STAR_WEIGHTS
     screen.TONEMAPPING = [NIGHT_EFFECT] [ACES]  USE_LUT USER_GAMMA_CORRECT USER_OUTPUT_COLORSPACE USER_LMT_MODE
         screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION NIGHT_EFFECT_AFTER_EXPOSURE
 screen.RESOURCEPACK = TEX_RES TEX_RENDER
 screen.MISC = STREAMER_MODE
 screen.ADVANCED = DEBUG_VIEW [AUTO_ADDED] [ADVANCED_SSGI]
     screen.AUTO_ADDED = *
-sliders = CONTRAST EXPOSURE EXPOSURE_SAMPLES EXPOSURE_UPDATE_SPEED MIN_EXPOSURE MAX_EXPOSURE EXPOSURE_BOUNDS OVEREXPOSE_SKY CUTOUT_ALIGN_STRENGTH MIN_LIGHT_MULT AMBIENT_LIGHT_MULT SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER MOON_LIGHT_MULT_USER NIGHT_SKY_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER AO_RADIUS AO_INTENSITY TEMPORAL_UPDATE_SPEED_AO AO_SAMPLES BOUNCE_MULT LIT_MULTIPLIER DIM_LIGHT_DESAT_USER TEMPORAL_UPDATE_SPEED_USER SCREEN_SAMPLES MIN_SAMPLES MAX_SAMPLES MAX_NEW_SAMPLES MAX_LIGHT_PROPAGATION SELF_ILLUMINATION POWERFUL_SAMPLE_AMOUNT VANILLA_COLORS SUN_TEMP TORCH_TEMP ATOMSPHERIC_FOG_DENSITY SKY_SATURATION SKY_BRIGHTNESS_USER NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION COLORS_SATURATION COLORS_CONTRAST COLORS_CONTRAST_BRIGHT_BIAS COLORS_SATURATION_WEIGHTS_RED COLORS_SATURATION_WEIGHTS_GREEN COLORS_SATURATION_WEIGHTS_BLUE TEX_RES
+sliders = CONTRAST EXPOSURE EXPOSURE_SAMPLES EXPOSURE_UPDATE_SPEED MIN_EXPOSURE MAX_EXPOSURE EXPOSURE_BOUNDS OVEREXPOSE_SKY CUTOUT_ALIGN_STRENGTH MIN_LIGHT_MULT AMBIENT_LIGHT_MULT SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER MOON_LIGHT_MULT_USER NIGHT_SKY_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER AO_RADIUS AO_INTENSITY TEMPORAL_UPDATE_SPEED_AO AO_SAMPLES BOUNCE_MULT LIT_MULTIPLIER DIM_LIGHT_DESAT_USER TEMPORAL_UPDATE_SPEED_USER shadowDistance shadowMapResolution SHADOW_DISTORTION SCREEN_SAMPLES MIN_SAMPLES MAX_SAMPLES MAX_NEW_SAMPLES MAX_LIGHT_PROPAGATION SELF_ILLUMINATION POWERFUL_SAMPLE_AMOUNT VANILLA_COLORS SUN_TEMP TORCH_TEMP ATOMSPHERIC_FOG_DENSITY SKY_SATURATION SKY_COLOR_BLEND SKY_BRIGHTNESS_USER STAR_WEIGHTS NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION COLORS_SATURATION COLORS_CONTRAST COLORS_CONTRAST_BRIGHT_BIAS COLORS_SATURATION_WEIGHTS_RED COLORS_SATURATION_WEIGHTS_GREEN COLORS_SATURATION_WEIGHTS_BLUE TEX_RES
