Added old lighting

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -66,6 +66,8 @@ texture.noise = /tex/noise/WHITE_RGBA.png
 blend.composite.colortex6=off
 blend.composite.colortex7=off
 
+texture.gbuffers.shadowcolor0=minecraft:dynamic/lightmap_1
+texture.deferred.shadowcolor0=minecraft:dynamic/lightmap_1
 texture.composite.shadowcolor1=/LUTs/lut.dat TEXTURE_3D RGB16F 65 65 65 RGB FLOAT
 # texture.composite.shadowcolor1=/LUTs/lut.png
 
