--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -71,12 +71,28 @@ texture.deferred.shadowcolor0=minecraft:dynamic/lightmap_1
 texture.composite.shadowcolor1=/LUTs/lut.dat TEXTURE_3D RGB16F 65 65 65 RGB FLOAT
 # texture.composite.shadowcolor1=/LUTs/lut.png
 
-# shadowcomp doesn't exist intentionally, it acts as shadowcomp_pre since that program isn't provided by optifine
-flip.shadowcomp.colortex1=true
-program.shadowcomp.enabled=true
+program.shadow.enabled=SHADOWS_ENABLED
 
+# shadowcomp doesn't exist intentionally, it acts as shadowcomp_pre since that program isn't provided by optifine
+flip.deferred.colortex0=false
 flip.shadowcomp1.colortex1=true
-program.shadowcomp1.enabled=true
+flip.deferred.colortex2=false
+flip.deferred.colortex3=false
+flip.deferred.colortex4=false
+flip.deferred.colortex5=false
+flip.deferred.colortex6=false
+flip.deferred.colortex7=false
+program.shadowcomp.enabled=SHADOWS_ENABLED
+
+flip.deferred.colortex0=false
+flip.shadowcomp1.colortex1=true
+flip.deferred.colortex2=false
+flip.deferred.colortex3=false
+flip.deferred.colortex4=false
+flip.deferred.colortex5=false
+flip.deferred.colortex6=false
+flip.deferred.colortex7=false
+program.shadowcomp1.enabled=SHADOWS_ENABLED
 
 flip.deferred.colortex0=false
 flip.deferred.colortex1=true
@@ -130,21 +146,22 @@ flip.final.colortex7=false
 program.final.enabled=true
 
 
-screen = <profile> STREAMER_MODE <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [ADVANCED] [RESOURCEPACK]
+screen = <profile> STREAMER_MODE <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [ADVANCED]
 
 screen.POST_PROCESSING = CONTRAST EXPOSURE [EXPOSURE_PREFS] [TONEMAPPING]
     screen.EXPOSURE_PREFS = AUTO_EXPOSE EXPOSURE_SAMPLES EXPOSURE_UPDATE_SPEED MIN_EXPOSURE MAX_EXPOSURE EXPOSURE_BOUNDS
-screen.SHADOWS = SHADOWS_ENABLED_USER <empty> <empty> <empty> SHADOW_SUPERSAMPLE shadowDistance shadowMapResolution SHADOW_DISTORTION
+screen.SHADOWS = SHADOWS_ENABLED_USER <empty> <empty> <empty> shadowDistance shadowMapResolution SHADOW_DISTORTION
 screen.LIGHTING = [SSAO] [SSGI] [LIGHT_STRENGTH] VANILLA_LIGHTING <empty> <empty> CUTOUT_ALIGN_STRENGTH <empty> <empty> <empty> ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY <empty> <empty> SUN_TEMP TORCH_TEMP
     screen.SSAO = AO_MODE AO_RADIUS AO_INTENSITY PRETTY_AO TEMPORAL_UPDATE_SPEED_AO AO_SAMPLES
     screen.SSGI = SSGI_ENABLED COLORED_LIGHT_ONLY DIM_LIGHT_DESAT_USER BOUNCE_MULT LIT_MULTIPLIER TEMPORAL_UPDATE_SPEED_USER [ADVANCED_SSGI]
-    screen.LIGHT_STRENGTH = REAL_LIGHTING SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER NIGHT_SKY_LIGHT_MULT_USER MOON_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER 
+    screen.LIGHT_STRENGTH = REAL_LIGHTING <empty> SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER NIGHT_SKY_LIGHT_MULT_USER MOON_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER 
         screen.ADVANCED_SSGI = USE_SECONDARY_BOUNCES ADAPTIVE_SAMPLING_SSGI SCREEN_SAMPLES MIN_SAMPLES MAX_SAMPLES MAX_NEW_SAMPLES MAX_LIGHT_PROPAGATION SELF_ILLUMINATION POWERFUL_SAMPLE POWERFUL_SAMPLE_AMOUNT OLD_SAMPLING
 screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] VANILLA_COLORS VANILLA_LIGHTING <empty> <empty> SUN_TEMP TORCH_TEMP SKY_SATURATION SKY_COLOR_BLEND <empty> <empty> SKY_BRIGHTNESS_USER STAR_WEIGHTS
     screen.TONEMAPPING = [NIGHT_EFFECT] [ACES]  USE_LUT USER_GAMMA_CORRECT USER_OUTPUT_COLORSPACE USER_LMT_MODE
         screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION NIGHT_EFFECT_AFTER_EXPOSURE
     screen.RESOURCEPACK = TEX_RES TEX_RENDER
-screen.ADVANCED = DEBUG_VIEW [AUTO_ADDED] [ADVANCED_SSGI]
+screen.ADVANCED = DEBUG_VIEW [EXPERIMENTAL] <empty> <empty> [AUTO_ADDED]
+    screen.EXPERIMENTAL = SHADOW_SUPERSAMPLE [RESOURCEPACK]
     screen.AUTO_ADDED = *
 sliders = CONTRAST EXPOSURE EXPOSURE_SAMPLES EXPOSURE_UPDATE_SPEED MIN_EXPOSURE MAX_EXPOSURE EXPOSURE_BOUNDS CUTOUT_ALIGN_STRENGTH MIN_LIGHT_MULT_USER AMBIENT_LIGHT_MULT_USER SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER MOON_LIGHT_MULT_USER NIGHT_SKY_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER AO_RADIUS AO_INTENSITY TEMPORAL_UPDATE_SPEED_AO AO_SAMPLES BOUNCE_MULT LIT_MULTIPLIER DIM_LIGHT_DESAT_USER TEMPORAL_UPDATE_SPEED_USER shadowDistance shadowMapResolution SHADOW_DISTORTION SCREEN_SAMPLES MIN_SAMPLES MAX_SAMPLES MAX_NEW_SAMPLES MAX_LIGHT_PROPAGATION SELF_ILLUMINATION POWERFUL_SAMPLE_AMOUNT VANILLA_COLORS SUN_TEMP TORCH_TEMP ATMOSPHERIC_FOG_DENSITY SKY_SATURATION SKY_COLOR_BLEND SKY_BRIGHTNESS_USER STAR_WEIGHTS NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION COLORS_SATURATION COLORS_CONTRAST COLORS_CONTRAST_BRIGHT_BIAS COLORS_SATURATION_WEIGHTS_RED COLORS_SATURATION_WEIGHTS_GREEN COLORS_SATURATION_WEIGHTS_BLUE TEX_RES
 
