Added basic PCF shadow filtering

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -32,8 +32,8 @@ particles.before.deferred=true
 
 # TODO: add custom overlay
 # underwaterOverlay=false
-# texture.noise = /tex/noise/LDR_RGBA_0.png
-texture.noise = /tex/noise/WHITE_RGBA.png
+texture.noise = /tex/noise/LDR_RGBA_0.png
+# texture.noise = /tex/noise/WHITE_RGBA.png
 
 
 # albedo:   0
