--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -154,12 +154,12 @@ screen.LIGHTING = [LIGHT_STRENGTH] [SSAO_BETA] VANILLA_LIGHTING CUTOUT_ALIGN_STR
     screen.SSAO_BETA = AO_MODE AO_INTENSITY
     screen.SSAO = AO_MODE AO_INTENSITY AO_RADIUS <empty> <empty> <empty> AO_SAMPLES TEMPORAL_UPDATE_SPEED_AO
     screen.LIGHT_STRENGTH = REAL_LIGHTING <empty> SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER NIGHT_SKY_LIGHT_MULT_USER MOON_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER 
-screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] VANILLA_COLORS VANILLA_LIGHTING <empty> <empty> SUN_TEMP TORCH_TEMP <empty> SKY_COLOR_BLEND <empty> <empty> SKY_BRIGHTNESS_USER STAR_WEIGHTS
+screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] VANILLA_COLORS VANILLA_LIGHTING <empty> <empty> SUN_TEMP TORCH_TEMP SKY_SATURATION SKY_COLOR_BLEND <empty> <empty> SKY_BRIGHTNESS_USER STAR_WEIGHTS
     screen.TONEMAPPING = USE_LUT USER_LMT_MODE USER_OUTPUT_COLORSPACE USER_GAMMA_CORRECT
         screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION NIGHT_EFFECT_AFTER_EXPOSURE
     screen.RESOURCEPACK = TEX_RES TEX_RENDER
 screen.ADVANCED = DEBUG_VIEW [EXPERIMENTAL] <empty> <empty> [AUTO_ADDED]
-    screen.EXPERIMENTAL = [RESOURCEPACK] [SSAO] [NIGHT_EFFECT] <empty> <empty> <empty> SHADOW_SUPERSAMPLE SKY_SATURATION
+    screen.EXPERIMENTAL = [RESOURCEPACK] [SSAO] [NIGHT_EFFECT] <empty> <empty> <empty> SHADOW_SUPERSAMPLE
     screen.AUTO_ADDED = *
 sliders = CONTRAST EXPOSURE EXPOSURE_SAMPLES EXPOSURE_UPDATE_SPEED MIN_EXPOSURE MAX_EXPOSURE EXPOSURE_BOUNDS CUTOUT_ALIGN_STRENGTH MIN_LIGHT_MULT_USER AMBIENT_LIGHT_MULT_USER SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER MOON_LIGHT_MULT_USER NIGHT_SKY_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER AO_RADIUS AO_INTENSITY TEMPORAL_UPDATE_SPEED_AO AO_SAMPLES BOUNCE_MULT LIT_MULTIPLIER DIM_LIGHT_DESAT_USER TEMPORAL_UPDATE_SPEED_USER shadowDistance shadowMapResolution SHADOW_DISTORTION SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES VANILLA_COLORS SUN_TEMP TORCH_TEMP ATMOSPHERIC_FOG_DENSITY SKY_SATURATION SKY_COLOR_BLEND SKY_BRIGHTNESS_USER STAR_WEIGHTS NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION COLORS_SATURATION COLORS_CONTRAST COLORS_CONTRAST_BRIGHT_BIAS COLORS_SATURATION_WEIGHTS_RED COLORS_SATURATION_WEIGHTS_GREEN COLORS_SATURATION_WEIGHTS_BLUE TEX_RES
 
