Revert "Improved atmospheric fog quality"
This reverts commit 7c5f2138af80af165f46ccea579e81a2fa0d1836.

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -151,7 +151,7 @@ flip.final.colortex0=true
 flip.final.colortex1=false
 flip.final.colortex2=false
 flip.final.colortex3=false
-flip.final.colortex4=false
+flip.final.colortex4=
 flip.final.colortex5=false
 flip.final.colortex6=false
 flip.final.colortex7=false
