Revert "Added setup for TAA"
This reverts commit 1f143ecc239b2b30772479b68737761a0d7b5bca.

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -114,7 +114,7 @@ flip.deferred1.colortex6=false
 flip.deferred1.colortex7=false
 program.deferred1.enabled=true
 
-# shadows
+
 flip.composite.colortex0=true
 flip.composite.colortex1=false
 flip.composite.colortex2=false
@@ -125,33 +125,21 @@ flip.composite.colortex6=false
 flip.composite.colortex7=false
 program.composite.enabled=SHADOWS_ENABLED
 
-# TAA
 flip.composite1.colortex0=true
 flip.composite1.colortex1=false
 flip.composite1.colortex2=false
 flip.composite1.colortex3=false
-flip.composite1.colortex4=true
+flip.composite1.colortex4=false
 flip.composite1.colortex5=false
 flip.composite1.colortex6=false
 flip.composite1.colortex7=false
 program.composite1.enabled=true
 
-# color science
-flip.composite2.colortex0=true
-flip.composite2.colortex1=false
-flip.composite2.colortex2=false
-flip.composite2.colortex3=false
-flip.composite2.colortex4=false
-flip.composite2.colortex5=false
-flip.composite2.colortex6=false
-flip.composite2.colortex7=false
-program.composite2.enabled=true
-
 flip.final.colortex0=true
 flip.final.colortex1=false
 flip.final.colortex2=false
 flip.final.colortex3=false
-flip.final.colortex4=
+flip.final.colortex4=false
 flip.final.colortex5=false
 flip.final.colortex6=false
 flip.final.colortex7=false
