Added basic dithering

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -148,7 +148,7 @@ program.final.enabled=true
 
 screen = <profile> STREAMER_MODE <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [ADVANCED]
 
-screen.POST_PROCESSING = CONTRAST EXPOSURE [TONEMAPPING]
+screen.POST_PROCESSING = CONTRAST EXPOSURE [TONEMAPPING] <empty> <empty> <empty> DITHERING_MODE
 screen.SHADOWS = SHADOWS_ENABLED_USER <empty> <empty> <empty> shadowDistance shadowMapResolution SHADOW_DISTORTION <empty> <empty> <empty> SHADOW_FILTERING SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES
 screen.LIGHTING = [LIGHT_STRENGTH] [SSAO_BETA] VANILLA_LIGHTING CUTOUT_ALIGN_STRENGTH <empty> <empty> ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY <empty> <empty> SUN_TEMP TORCH_TEMP
     screen.SSAO_BETA = AO_MODE AO_INTENSITY
