Separated voxelization code into its own file

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -24,7 +24,7 @@ shadow.culling=false
 
 shadowTerrain=true
 shadowTransluscent=true
-shadowEntities=true
+shadowEntities=false
 shadowBlockEntities=true
 
 particles.before.deferred=true
