Turned clouds off again

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,4 +1,4 @@
-clouds=fancy
+clouds=off
 oldHandLight=false
 dynamicHandLight=true
 oldLighting=false
@@ -43,6 +43,11 @@ texture.noise = /tex/noise/LDR_RGBA_0.png
 # generic:  5
 # generic2: 6
 # generic3: 7
+
+blend.gbuffers_clouds = SRC_ALPHA ONE_MINUS_SRC_ALPHA SRC_ALPHA ONE_MINUS_SRC_ALPHA
+blend.gbuffers_armor_glint = ONE ONE ONE ONE
+
+
 
 # blend.gbuffers_water=ONE ZERO ONE ZERO
 # blend.gbuffers_water.texture=off
