Added invisibility effect

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -76,6 +76,10 @@ texture.deferred.shadowcolor0=minecraft:dynamic/lightmap_1
 texture.composite.shadowcolor1=/LUTs/lut.dat TEXTURE_3D RGB16F 65 65 65 RGB FLOAT
 # texture.composite.shadowcolor1=/LUTs/lut.png
 
+
+uniform.bool.isInvisible=is_invisible
+
+
 program.shadow.enabled=SHADOWS_ENABLED
 
 # shadowcomp doesn't exist intentionally, it acts as shadowcomp_pre since that program isn't provided by optifine
