Added waving objects

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -1,7 +1,7 @@
 # (some of) block.1 mappings referenced from https://minecraft.fandom.com/wiki/List_of_block_textures#Static and https://static.wikia.nocookie.net/minecraft_gamepedia/images/1/19/Block_overview.png/revision/latest/scale-to-width-down/1000?cb=20200821110146
 # others were referenced by listing through creative menu and setblock autocomplete list
 # diagonal cutouts (transluscent)
-block.1 = crimson_fungus crimson_roots twisting_vines_plant twisting_vines warped_fungus warped_roots nether_sprouts cobweb bamboo_sapling carrots dead_bush large_fern sunflower lilac rose_bush peony kelp_plant kelp dead_tube_coral dead_brain_coral dead_bubble_coral dead_fire_coral dead_horn_coral tall_seagrass tall_grass oak_sapling spruce_sapling birch_sapling jungle_sapling acacia_sapling dark_oak_sapling red_mushroom melon_stem attached_melon_stem pumpkin_stem attached_pumpkin_stem beetroots potatoes nether_wart
+block.1 = crimson_fungus twisting_vines_plant twisting_vines warped_fungus cobweb bamboo_sapling carrots dead_bush kelp_plant kelp dead_tube_coral dead_brain_coral dead_bubble_coral dead_fire_coral dead_horn_coral oak_sapling spruce_sapling birch_sapling jungle_sapling acacia_sapling dark_oak_sapling red_mushroom melon_stem attached_melon_stem pumpkin_stem attached_pumpkin_stem beetroots potatoes nether_wart seagrass tall_seagrass
 
 # upside-down diagonal cutouts (transluscent)
 block.2 = weeping_vines_plant weeping_vines hanging_roots cave_vines:berries=false cave_vines_plant:berries=false spore_blossom
@@ -20,13 +20,29 @@ block.5 = amethyst_cluster:facing=down large_amethyst_bud:facing=down medium_ame
 # last entries separated by two spaces don't usually emit light
 block.6 = lava_cauldron campfire:lit=true jack_o_lantern torch wall_torch blast_furnace:lit=true furnace:lit=true smoker:lit=true soul_campfire:lit=true soul_torch soul_wall_torch deepslate_redstone_ore:lit=true redstone_ore:lit=true enchanting_table redstone_torch redstone_wall_torch  diamond_ore deepslate_diamond_ore emerald_ore deepslate_emerald_ore
 
-# wavy stuff (that is also a diagonal up-facing cutout)
-block.7 = fern dandelion poppy blue_orchid allium azure_bluet red_tulip orange_tulip white_tulip pink_tulip oxeye_daisy cornflower lily_of_the_valley wither_rose sweet_berry_bush tube_coral brain_coral bubble_coral fire_coral horn_coral seagrass grass wheat;
-
 # exception: partially-lit up-facing cutouts (NONE ASSIGNED)
+# block.7 = 
 
 # exception: partially-lit down-facing cutouts
 block.8 = cave_vines:berries=true cave_vines_plant:berries=true
 
 # little *s that don't want to cooperate with the lightmap
 block.9 = magma_block sculk_sensor:sculk_sensor_phase=active
+
+# wavy stuff (that is also a diagonal up-facing cutout)
+block.10 = fern sweet_berry_bush grass large_fern:half=lower lilac:half=lower rose_bush:half=lower peony:half=lower tall_grass:half=lower
+
+# two-tall wavy stuff (upper part only) (that is also a diagonal up-facing cutout)
+block.11 = large_fern:half=upper lilac:half=upper rose_bush:half=upper peony:half=upper tall_grass:half=upper
+
+# stiff wavy stuff (that is also a diagonal up-facing cutout)
+block.12 = dandelion poppy blue_orchid allium azure_bluet red_tulip orange_tulip white_tulip pink_tulip oxeye_daisy cornflower lily_of_the_valley wither_rose tube_coral brain_coral bubble_coral fire_coral horn_coral wheat crimson_roots warped_roots nether_sprouts sunflower:half=lower
+
+# stiff two-tall stuff (that is also a diagonal up-facing cutout)
+block.13 = sunflower:half=upper
+
+# wavy stuff (that is not a cutout)
+# block.14 = 
+
+# stiff wavy stuff (that is not a cutout)
+block.15 = oak_leaves spruce_leaves birch_leaves jungle_leaves acacia_leaves dark_oak_leaves mangrove_leaves azalea_leaves flowering_azalea_leaves
