Further improved waving, added nether wind profile

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -30,13 +30,13 @@ block.8 = cave_vines:berries=true cave_vines_plant:berries=true
 block.9 = magma_block sculk_sensor:sculk_sensor_phase=active
 
 # wavy stuff (that is also a diagonal up-facing cutout)
-block.10 = fern sweet_berry_bush grass large_fern:half=lower lilac:half=lower rose_bush:half=lower peony:half=lower tall_grass:half=lower
+block.10 = fern sweet_berry_bush grass warped_roots nether_sprouts large_fern:half=lower lilac:half=lower rose_bush:half=lower peony:half=lower tall_grass:half=lower
 
 # two-tall wavy stuff (upper part only) (that is also a diagonal up-facing cutout)
 block.11 = large_fern:half=upper lilac:half=upper rose_bush:half=upper peony:half=upper tall_grass:half=upper
 
 # stiff wavy stuff (that is also a diagonal up-facing cutout)
-block.12 = dandelion poppy blue_orchid allium azure_bluet red_tulip orange_tulip white_tulip pink_tulip oxeye_daisy cornflower lily_of_the_valley wither_rose tube_coral brain_coral bubble_coral fire_coral horn_coral wheat crimson_roots warped_roots nether_sprouts sunflower:half=lower
+block.12 = dandelion poppy blue_orchid allium azure_bluet red_tulip orange_tulip white_tulip pink_tulip oxeye_daisy cornflower lily_of_the_valley wither_rose tube_coral brain_coral bubble_coral fire_coral horn_coral wheat crimson_roots sunflower:half=lower
 
 # stiff two-tall stuff (that is also a diagonal up-facing cutout)
 block.13 = sunflower:half=upper
