renamed custom invisibility uniform

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -77,7 +77,7 @@ texture.composite.shadowcolor1=/LUTs/lut.dat TEXTURE_3D RGB16F 65 65 65 RGB FLOA
 # texture.composite.shadowcolor1=/LUTs/lut.png
 
 
-uniform.float.isInvisible=clamp(smooth(if(is_invisible, 1, -0.1), 0.5, 2), 0, 1)
+uniform.float.invisibility=clamp(smooth(if(is_invisible, 1, -0.1), 0.5, 2), 0, 1)
 
 
 program.shadow.enabled=SHADOWS_ENABLED
