--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -77,7 +77,9 @@ texture.composite.shadowcolor1=/LUTs/lut.dat TEXTURE_3D RGB16F 65 65 65 RGB FLOA
 # texture.composite.shadowcolor1=/LUTs/lut.png
 
 
+
 uniform.float.invisibility=clamp(smooth(if(is_invisible, 1, -0.1), 0.5, 2), 0, 1)
+
 
 
 program.shadow.enabled=SHADOWS_ENABLED
@@ -166,7 +168,7 @@ screen.LIGHTING = [LIGHT_STRENGTH] [SSAO_BETA] VANILLA_LIGHTING CUTOUT_ALIGN_STR
 screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] BOSS_BATTLE_COLORS VANILLA_LIGHTING <empty> <empty> SUN_TEMP TORCH_TEMP SKY_SATURATION SKY_COLOR_BLEND SKY_BRIGHTNESS_USER STAR_WEIGHTS <empty> <empty> POST_TEMP VANILLA_COLORS
     screen.TONEMAPPING = USE_LUT USER_LMT_MODE USER_OUTPUT_COLORSPACE USER_GAMMA_CORRECT
         screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION NIGHT_EFFECT_AFTER_EXPOSURE
-screen.MISC = STREAMER_MODE BRIGHT_NETHER INVISIBILITY_DISTORTION <empty> <empty> <empty> WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER
+screen.MISC = STREAMER_MODE BRIGHT_NETHER INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS <empty> <empty> WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER
     screen.RESOURCEPACK = TEX_RES TEX_RENDER
 screen.ADVANCED = DEBUG_VIEW SHADOW_DEBUG <empty> <empty> SHADOW_TRANSITION_MIXING <empty> <empty> <empty> [EXPERIMENTAL] [AUTO_ADDED]
     screen.EXPERIMENTAL = [RESOURCEPACK] [SSAO] [NIGHT_EFFECT] [FORCED_PERSPECTIVE] <empty> <empty> SHADOW_SUPERSAMPLE SHADOW_AFFECTED_BY_LIGHTMAP PIXELATED_SHADOWS
